Navigation transition effect added, collapse fixed

--- a/src/scss/nav.scss
+++ b/src/scss/nav.scss
@@ -8,7 +8,11 @@
     top: 0;
     z-index: 16;
     width: 100%;
-    background-color: rgba(43, 43, 43, 0.6);
+    background-color: rgba(43, 43, 43, 0.8);
+}
+
+.top-nav {
+    transition: 1s ease-in-out;
 }
 
 .navbar-brand {
